vlib/v/checker/tests/generic_fntype_err.out
vlib/v/checker/tests/generic_fntype_err.vv:3:21: notice: unused parameter: `sort_cb`
    1 | type FnSort[T] = fn (const_a T, const_b T) int
    2 |
    3 | fn sort[T](arr []T, sort_cb FnSort) []T {
      |                     ~~~~~~~
    4 |     return arr
    5 | }
vlib/v/checker/tests/generic_fntype_err.vv:3:29: error: generic function `FnSort` in fn declaration must specify the generic type names, e.g. FnSort[T]
    1 | type FnSort[T] = fn (const_a T, const_b T) int
    2 |
    3 | fn sort[T](arr []T, sort_cb FnSort) []T {
      |                             ~~~~~~
    4 |     return arr
    5 | }
